Fix issue with Gutenberg full-width block alignment causing unnecessary horizontal scrolling

--- a/css/src/_wordpress.scss
+++ b/css/src/_wordpress.scss
@@ -253,8 +253,8 @@ body {
 	&.full-width-content {
 		.alignfull {
 			margin: {
-				left: calc(50% - 50vw);
-				right: calc(50% - 50vw);
+				left: calc(50% - 50vw - .49rem);
+				right: calc(50% - 50vw - .49rem);
 			}
 			width: 100vw;
 			max-width: 100vw;
